--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-DB_CONNECTION_STRING=mongodb://localhost:27017
+DB_CONNECTION_STRING=mongodb://cfortier:cfortier123@cluster0-shard-00-00.gjdrt.mongodb.net:27017,cluster0-shard-00-01.gjdrt.mongodb.net:27017,cluster0-shard-00-02.gjdrt.mongodb.net:27017/test?authSource=admin&replicaSet=atlas-e0cio3-shard-0&readPreference=primary&ssl=true
 DB_NAME=sample_supplies
 SECRET=kcjxkjjksdasjdkjkasjkldjaslk
